--- a/django_web_server/static/app.html
+++ b/django_web_server/static/app.html
@@ -1,20 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" ng-app='GPXMapsApp'>
+<html lang="en" ng-app='PropDevEx'>
 	<head>
 		<meta charset="utf-8">
-		<title>gpxmaps.net</title>
-		<link rel="icon" type="image/png" href="/static/img/icon/compass.16.png">
+		<title>Fisher Roeland</title>
 
 		<!-- CSS -->
 		<link rel="stylesheet" type="text/css" href="/static/css/base.css" />
 	    
 		<!--- EXTERNAL LIB -->
 	    <script src="/static/lib/js/angular/angular.1.3.15.js"></script>
-
-        <!-- UI-GRID -->
-        <link rel="styleSheet" href="/static/lib/ui-grid/ui-grid.css"/>
-    	<script src="/static/lib/ui-grid/ui-grid.js"></script>
-    	<link rel="styleSheet" href="/static/lib/css/ui-grid.override.css"/>
 
 	    <!-- LIB -->
 	    <script src="/static/js/extensions.js"></script>
@@ -25,13 +19,9 @@
 	    <script src="/static/js/hfx.js"></script>    
 
 	    <!-- DOMAIN -->
-	    <script src="/static/js/gpx.logic.js"></script>
-	    <script src="/static/js/gpx.model.js"></script>	
-	    <script src="/static/js/gpx.editor.js"></script>	
 
 	    <!-- DATA MODEL -->
 	    <script src="/static/js/datamodel.js"></script>
-	    <script src="/static/js/prospectiveuser.js"></script>
 
 		<!-- VIEWS -->
 		<script src="/static/js/data.html.fragment.js"></script>
@@ -42,22 +32,6 @@
 		<script src="/static/js/controllers/god.controller.js"></script>
 		<script src="/static/js/controllers/modal.controller.js"></script>
 
-		<script src="/static/js/controllers/gpximport.controller.js"></script>
-		<script src="/static/js/controllers/gpxexport.controller.js"></script>
-		<script src="/static/js/controllers/gpxdatabase.controller.js"></script>
-		<script src="/static/js/controllers/gpx.controller.js"></script>
-		<script src="/static/js/controllers/gpxeditor.controller.js"></script>
-
-		<script src="/static/js/controllers/tracks.controller.js"></script>
-	    <script src="/static/js/controllers/waypoints.controller.js"></script>
-
-	    <script src="/static/js/controllers/map.controller.js"></script>
-		<script src="/static/js/controllers/elevationplot.controller.js"></script>
-
-		<script src="/static/js/controllers/help.controller.js"></script>
-
-		<script src="/static/js/controllers/user.controller.js"></script>
-		
 		<!-- APP -->
 		<script src="/static/js/app.js"></script>
 
@@ -75,18 +49,7 @@
 		    <div>
 			    <div id='viewport' class='viewport' visible='false'>
 		        	<div data-html-fragment='home'></div>
-					<div data-html-fragment='import'></div>
-	           		<div data-html-fragment='gpxdatabase'></div>
-	           		<div data-html-fragment='gpx'></div>
-	           		<div data-html-fragment='editor'></div>
-					<div data-html-fragment='map'></div>
-	           		<div data-html-fragment='tracks'></div>
-	           		<div data-html-fragment='elevation'></div>
-	           		<div data-html-fragment='waypoints'></div>
-	           		<div data-html-fragment='debug'> </div>
-	           		<div data-html-fragment='export'></div>
-	           		<div data-html-fragment='help'></div>
-	           		<div data-html-fragment='user'></div>
+		        	<div data-html-fragment='contact'></div>
 			    </div>
 		    </div>
 		</div>
