select next/prev property in category

--- a/django_web_server/static/app.html
+++ b/django_web_server/static/app.html
@@ -60,6 +60,7 @@
 		        	<div data-html-fragment='retail'></div>
 					<div data-html-fragment='investment'></div>
 					<div data-html-fragment='sold'></div>
+					<div data-html-fragment='property'></div>
 			    </div>
 		    </div>
 		</div>
