contact bar - working

--- a/django_web_server/static/app.html
+++ b/django_web_server/static/app.html
@@ -45,6 +45,9 @@
 
 	<body ng-controller="GodController" ng-cloak>
 
+
+		<div data-html-fragment='contactbar'>
+		</div>
 		<div data-html-fragment='navbar'>
 		</div>
 
