--- a/django_web_server/static/app.html
+++ b/django_web_server/static/app.html
@@ -56,6 +56,7 @@
 
 			<div id='viewport' class='viewport' visible='false'>
 				<div data-html-fragment='home'></div>
+				<div data-html-fragment='category'></div>
 			</div>
 
 			<div data-html-fragment='tailbar'>
