datamodel refactor to match DB model changes

--- a/django_web_server/static/app.html
+++ b/django_web_server/static/app.html
@@ -46,7 +46,7 @@
 
 	<body ng-cloak>
 
-		<div ng-show='isLoaded();'>
+		<div ng-show='model.isBound();'>
 
 			<div data-html-fragment='contactbar'>
 			</div>
