selcted property view

--- a/django_web_server/static/app.html
+++ b/django_web_server/static/app.html
@@ -56,10 +56,10 @@
 
 			<div data-html-fragment='home'></div>
 			<div data-html-fragment='category'></div>
+			<div data-html-fragment='property'></div>
 
 			<div data-html-fragment='tailbar'>
 			</div>
-
 		<div>
 	</body>
 </html>
