contact us view

--- a/django_web_server/static/app.html
+++ b/django_web_server/static/app.html
@@ -52,6 +52,8 @@
 			</div>
 
 			<div data-html-fragment='home'></div>
+			<div data-html-fragment='contact'></div>
+
 			<div data-html-fragment='category'></div>
 			<div data-html-fragment='property'></div>
 
