--- a/django_web_server/static/index.html
+++ b/django_web_server/static/index.html
@@ -53,6 +53,7 @@
 
 			<div data-html-fragment='home'></div>
 			<div data-html-fragment='contact'></div>
+			<div data-html-fragment='about'></div>
 			<div data-html-fragment='xframe'></div>
 
 			<div data-html-fragment='category'></div>
